--- a/assets/custom-theme.css
+++ b/assets/custom-theme.css
@@ -18,7 +18,7 @@
     --degraded-border-left-color: #f7b731;
     --up-border-left-color: #20bf6b;
     --tag-color: #ffffff;
-    --tag-up-background-color: color-mix(in srgb, var(--base-color) 10%, #eee);
+    --tag-up-background-color: #20bf6b;
     --tag-down-background-color: #eb3b5a;
     --tag-degraded-background-color: #f7b731;
     --change-background-color: #f7b731;
